// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandBarButtonsMenu renders CommandBarButtonsMenu 1`] = `
<CustomizedCommandBarButton
  ariaLabel="More items"
  className="commandBarButtonsMenu"
  componentRef={Object {}}
  menuIconProps={
    Object {
      "className": "commandBarButtonsMenuButton",
      "iconName": "More",
    }
  }
  menuProps={
    Object {
      "className": "commandBarButtonsSubmenu",
      "items": Array [
        Object {
          "key": "export report",
          "onRender": [Function],
        },
        Object {
          "key": "start over",
          "onRender": [Function],
        },
      ],
    }
  }
  role="button"
/>
`;

exports[`CommandBarButtonsMenu renders child buttons 1`] = `
<div
  role="menuitem"
>
  <React.Fragment>
    Report export button
  </React.Fragment>
</div>
`;

exports[`CommandBarButtonsMenu renders child buttons 2`] = `
<div
  role="menuitem"
>
  <React.Fragment>
    Start over button
  </React.Fragment>
</div>
`;
